--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -2,11 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:configChanges="orientation"
-    android:onClick="onClick"
-    android:screenOrientation="landscape"
-    tools:context="com.plataformas.IntroActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.plataformas.MenuActivity"
+    tools:showIn="@layout/activity_menu">
 
 </android.support.constraint.ConstraintLayout>
