--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -7,6 +7,7 @@
     android:configChanges="orientation"
     android:onClick="onClick"
     android:screenOrientation="landscape"
+    android:background="@drawable/intro_fondo"
     tools:context="com.plataformas.IntroActivity">
 
 </android.support.constraint.ConstraintLayout>
