--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -12,18 +12,62 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
         android:layout_marginBottom="80dp"
-        >
+        android:layout_marginTop="120dp">
 
         <Button
             android:id="@+id/button"
             android:layout_width="104dp"
             android:layout_height="100dp"
+            android:layout_marginLeft="50dp"
             android:layout_weight="1"
             android:background="@drawable/nivel1"
+            android:onClick="NivelOnClick"
             tools:layout_editor_absoluteX="68dp"
-            tools:layout_editor_absoluteY="122dp"/>
+            tools:layout_editor_absoluteY="122dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/button"
+            android:layout_marginLeft="25dp"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:background="@drawable/nivel2"
+            android:onClick="NivelOnClick"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/button2"
+            android:layout_marginLeft="25dp"
+            android:layout_toEndOf="@+id/button2"
+            android:layout_toRightOf="@+id/button2"
+            android:layout_weight="1"
+
+            android:background="@drawable/nivel3"
+            android:onClick="NivelOnClick"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/button3"
+            android:layout_marginLeft="25dp"
+            android:layout_toEndOf="@+id/button3"
+            android:layout_toRightOf="@+id/button3"
+            android:layout_weight="1"
+            android:background="@drawable/nivel4"
+            android:onClick="NivelOnClick"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -42,6 +86,7 @@
             android:src="@drawable/boton_volver_menu"
             tools:layout_editor_absoluteX="190dp"
             tools:layout_editor_absoluteY="238dp" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
