--- a/app/src/main/res/layout/activity_pelotas.xml
+++ b/app/src/main/res/layout/activity_pelotas.xml
@@ -9,12 +9,56 @@
     android:screenOrientation="landscape"
     tools:context="com.plataformas.PelotasActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_marginBottom="80dp"
+        android:layout_marginTop="120dp">
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="80dp"
+            android:layout_weight="1"
+            android:background="@drawable/fut"
+            android:text="f"
+            android:textColor="@android:color/transparent"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/button"
+            android:layout_marginLeft="25dp"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:background="@drawable/bascket"
+            android:text="b"
+            android:textColor="@android:color/transparent"
+
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="104dp"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/button2"
+            android:layout_marginLeft="25dp"
+            android:layout_toEndOf="@+id/button2"
+            android:layout_toRightOf="@+id/button2"
+            android:layout_weight="1"
+
+            android:background="@drawable/tenis"
+            android:text="t"
+            android:textColor="@android:color/transparent"
+            tools:layout_editor_absoluteX="68dp"
+            tools:layout_editor_absoluteY="122dp" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
