--- a/app/src/main/res/layout/activity_ops.xml
+++ b/app/src/main/res/layout/activity_ops.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="15dp"
             android:background="#00ffffff"
             android:onClick="PelotasOnClick"
-            android:src="@drawable/boton_opciones"
+            android:src="@drawable/boton_pelotas"
             tools:layout_editor_absoluteX="190dp"
             tools:layout_editor_absoluteY="212dp" />
 
